b=246908: template builder incorrectly identifies container if isempty is in rule. r=ben, sr=shaver